--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/i18n": "^8.3.1",
     "fast-xml-parser": "^4.3.5",
     "nuxt": "^3.10.3",
     "vue": "^3.4.19",
