--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.16.0",
     "@nuxtjs/i18n": "^8.3.1",
+    "@pinia/nuxt": "^0.5.1",
     "fast-xml-parser": "^4.3.5",
     "nuxt": "^3.10.3",
     "vue": "^3.4.19",
