--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@nuxt/ui": "^2.16.0",
     "@nuxtjs/i18n": "^8.3.1",
     "@pinia/nuxt": "^0.5.1",
+    "date-fns": "^2.30.0",
     "fast-xml-parser": "^4.3.5",
-    "nuxt": "^3.10.3",
     "pinia": "^2.1.7",
     "typescript": "^5.4.5",
+    "v-calendar": "^3.1.2",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "nuxt": "^3.11.2"
   }
 }
