--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pinia/nuxt": "^0.5.1",
     "date-fns": "^2.30.0",
     "fast-xml-parser": "^4.3.5",
+    "idb": "^8.0.0",
     "pinia": "^2.1.7",
     "typescript": "^5.4.5",
     "v-calendar": "^3.1.2",
