--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "idb": "^8.0.0",
     "pinia": "^2.1.7",
     "typescript": "^5.4.5",
+    "uid": "^2.0.2",
     "v-calendar": "^3.1.2",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
